--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
     <!-- End Hero -->
 
-    <main id="main">
+    <main id="">
 
         <!-- ======= Counts Section ======= -->
         <section id="counts" class="counts">
